# curated-brain

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  PROGRESS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmark/: README.md  run_offline.sh
curated_brain/: __init__.py  backend.py  baselines.py  cassette.py  config.py  consolidation.py  dataset.py  dates.py  eval.py  extraction.py  fakes.py  langchain.py  llama_index.py  mcp_server.py  models.py  namespace.py  pricing.py  protocols.py  providers.py  resolve.py  retrieval.py  store.py  structured.py  surprise.py  util.py  vector.py
examples/: 01_basic_memory.py  02_belief_update.py  03_real_models.py
tests/: test_ann.py  test_beval.py  test_config.py  test_conformance.py  test_consolidation.py  test_coref_holdout.py  test_dataset.py  test_dated_extraction.py  test_dates.py  test_determinism_hash.py  test_examples.py  test_extraction.py  test_extraction_default.py  test_harness.py  test_langchain.py  test_llama_index.py  test_logging.py  test_logprob_live_replay.py  test_mcp.py  test_observability.py  test_persistence.py  test_phase2_fixes.py  test_phase3_essentials.py  test_phase3b.py  test_preference.py  test_pricing.py  test_providers.py  test_relational_temporal.py  test_resolve.py  test_restore_hardening.py  test_retrieval.py  test_robustness.py  test_selectivity.py  test_soak.py  test_store.py  test_structured.py  test_summarizer.py  test_threading.py  test_time_scoped_query.py  test_vector.py
tests/fixtures/: beval_cassette.json  coref_holdout.json  coref_holdout.sha256  extract_cassette.json  logprob_cassette.json  summarize_cassette.json
